force-app/main/default/objects/Configuration_Side__c/Configuration_Side__c.object-meta.xml
<CustomObject>
    <description>Configuration Side Object to hold the Side information from the Configuration Products(Glazing, Terrace, Railing etc )</description>
    <label>Configuration Side</label>
    <nameField>
        <label>Configuration Side Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Sides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>