force-app/main/default/objects/Configuration_Side__c/fields/Glass_Opening_Left__c.field-meta.xml
<CustomField>
    <fullName>Glass_Opening_Left__c</fullName>
    <description>Number of glass opening left</description>
    <label>Glass Opening Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>