force-app/main/default/objects/Configuration_Side__c/fields/Glass_Opening_Right__c.field-meta.xml
<CustomField>
    <fullName>Glass_Opening_Right__c</fullName>
    <description>Number of Glass openings right</description>
    <label>Glass Opening Right</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>