force-app/main/default/objects/Configuration_Side__c/fields/Left_Latch__c.field-meta.xml
<CustomField>
    <fullName>Left_Latch__c</fullName>
    <label>Left Latch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>