force-app/main/default/objects/Configuration_Side__c/fields/Number_Of_Panels__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Panels__c</fullName>
    <description>Number Of Panels per side</description>
    <label>Number Of Panels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>