force-app/main/default/objects/Configuration_Side__c/fields/Number_Of_Posts__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Posts__c</fullName>
    <description>Number of posts for Railing</description>
    <label>Number Of Posts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>