force-app/main/default/objects/Configuration_Side__c/fields/Opening_Width__c.field-meta.xml
<CustomField>
    <fullName>Opening_Width__c</fullName>
    <description>Opening width for Railing</description>
    <label>Opening Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>