force-app/main/default/objects/Configuration_Side__c/fields/Right_Latch__c.field-meta.xml
<CustomField>
    <fullName>Right_Latch__c</fullName>
    <label>Right Latch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>