force-app/main/default/objects/Configuration_Side__c/fields/Side_Number__c.field-meta.xml
<CustomField>
    <fullName>Side_Number__c</fullName>
    <label>Side Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>