force-app/main/default/objects/Configuration_Side__c/fields/Side_Width__c.field-meta.xml
<CustomField>
    <fullName>Side_Width__c</fullName>
    <label>Side Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>